# PulseFS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/PulseFS/Core/: MftScanner.hpp  UsnMonitor.hpp
include/PulseFS/Engine/: SearchIndex.hpp
include/PulseFS/ImGui/: ImGuiManager.hpp  ImGuiTheme.hpp
include/PulseFS/Platform/: Win32Window.hpp
include/PulseFS/Renderer/: D3D11Renderer.hpp
include/PulseFS/UI/: IconCache.hpp  MainWindow.hpp  SearchPanel.hpp
include/PulseFS/Utils/: Result.hpp  WinHelpers.hpp
src/: main.cpp
src/Core/: MftScanner.cpp  UsnMonitor.cpp
src/Engine/: SearchIndex.cpp
src/ImGui/: ImGuiManager.cpp  ImGuiTheme.cpp
src/Platform/: Win32Window.cpp
src/Renderer/: D3D11Renderer.cpp
src/UI/: IconCache.cpp  IconCache_Thumbnail.cpp  MainWindow.cpp  SearchPanel.cpp
